Adding Ticker price 24 hr
